[workspace]
default-members = ["time"]
members = ["time", "time-core", "time-macros"]
resolver = "2"

[workspace.dependencies]
time-core = { path = "time-core", version = "=0.1.1" }
time-macros = { path = "time-macros", version = "=0.2.13" }

criterion = { version = "0.5.1", default-features = false }
deranged = { version = "0.3.7", default-features = false }
itoa = "1.0.1"
js-sys = "0.3.58"
libc = "0.2.98"
num_threads = "0.1.2"
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = "1.0.0"
rand = { version = "0.8.4", default-features = false }
# ^1.0.184 due to serde-rs/serde#2538
serde = { version = "1.0.184", default-features = false }
serde_json = "1.0.68"
serde_test = "1.0.126"
trybuild = "1.0.68"

[profile.dev]
debug = 0

[profile.test]
debug = 2
