[package]
name = "time-benchmarks"
publish = false
version = "0.0.0"
authors = ["Jacob Pratt <the.z.cuber@gmail.com>", "Emil Lundberg <emil@emlun.se>"]
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
description = "Benchmarks for the time crate."

[dev-dependencies]
criterion = "0.3"
bench-util = { path = "./bench-util" }
rand = { version = "0.7", default-features = false }
serde_json = "1"
time = { path = "..", features = ["local-offset", "macros", "rand", "serde"] }

[[bench]]
name = "date"
harness = false

[[bench]]
name = "duration"
harness = false

[[bench]]
name = "error"
harness = false

[[bench]]
name = "ext"
harness = false

[[bench]]
name = "ext_std"
harness = false

[[bench]]
name = "ext_std_short"
harness = false

[[bench]]
name = "instant"
harness = false

[[bench]]
name = "offset_date_time"
harness = false

[[bench]]
name = "parse_error"
harness = false

[[bench]]
name = "primitive_date_time"
harness = false

[[bench]]
name = "rand"
harness = false

[[bench]]
name = "serde"
harness = false

[[bench]]
name = "time"
harness = false

[[bench]]
name = "utc_offset"
harness = false

[[bench]]
name = "util"
harness = false

[[bench]]
name = "weekday"
harness = false
