[package]
name = "time-benchmarks"
publish = false
version = "0.0.0"
authors = ["Jacob Pratt <open-source@jhpratt.dev>", "Emil Lundberg <emil@emlun.se>"]
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
description = "Benchmarks for the time crate."

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }
bench-util = { path = "./bench-util" }
rand = { version = "0.8.1", default-features = false }
serde_json = "1.0.61"
time = { path = "..", features = ["local-offset", "macros", "rand", "serde", "formatting", "parsing"] }

[[bench]]
name = "date"
harness = false

[[bench]]
name = "duration"
harness = false

[[bench]]
name = "instant"
harness = false

[[bench]]
name = "offset_date_time"
harness = false

[[bench]]
name = "primitive_date_time"
harness = false

[[bench]]
name = "rand"
harness = false

[[bench]]
name = "time"
harness = false

[[bench]]
name = "utc_offset"
harness = false

[[bench]]
name = "util"
harness = false

[[bench]]
name = "weekday"
harness = false
