[package]
name = "time-formatting"
version = "0.1.0"
authors = ["Jacob Pratt <the.z.cuber@gmail.com>"]
edition = "2018"
repository = "https://github.com/time-rs/time"
categories = ["date-and-time", "parser-implementations"]
readme = "../README.md"
license = "MIT OR Apache-2.0"
build = "build.rs"
include = ["src/**/*", "LICENSE-*", "build.rs"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[build-dependencies]
version_check = "0.9.2"
