[package]
name = "time-macros-impl"
version = "0.1.0"
authors = ["Jacob Pratt <the.z.cuber@gmail.com>"]
edition = "2018"
repository = "https://github.com/time-rs/time"
keywords = ["date", "time", "calendar", "duration"]
categories = ["date-and-time"]
readme = "../README.md"
license = "MIT OR Apache-2.0"
description = "Procedural macros for the time crate."

[dependencies]
proc-macro2 = "1"
syn = "1"
quote = "1"
proc-macro-hack = "0.5"

[lib]
proc-macro = true
