[package]
name = "time-macros-impl"
version = "0.2.0-dev"
authors = ["Jacob Pratt <open-source@jhpratt.dev>", "Time contributors"]
edition = "2018"
repository = "https://github.com/time-rs/time"
keywords = ["date", "time", "calendar", "duration"]
categories = ["date-and-time"]
readme = "../README.md"
license = "MIT OR Apache-2.0"
description = "Procedural macros for the time crate."

[dependencies]
proc-macro-hack = "0.5.19"

[lib]
proc-macro = true
