[package]
name = "time-macros"
version = "0.1.1"
authors = ["Jacob Pratt <the.z.cuber@gmail.com>"]
edition = "2018"
repository = "https://github.com/time-rs/time"
keywords = ["date", "time", "calendar", "duration"]
categories = ["date-and-time"]
readme = "../README.md"
license = "MIT OR Apache-2.0"
description = "Procedural macros for the time crate."

[dependencies]
time-macros-impl = { version = "0.1", path = "../time-macros-impl" }
proc-macro-hack = "0.5"
