[package]
name = "time-macros"
version = "0.2.0-dev"
authors = ["Jacob Pratt <open-source@jhpratt.dev>", "Time contributors"]
edition = "2018"
repository = "https://github.com/time-rs/time"
keywords = ["date", "time", "calendar", "duration"]
categories = ["date-and-time"]
readme = "../README.md"
license = "MIT OR Apache-2.0"
description = "Procedural macros for the time crate."

[lib]
path = "lib.rs"

[features]
large-dates = ["time-macros-impl/large-dates"]

[dependencies]
time-macros-impl = { version = "=0.2.0-dev", path = "../time-macros-impl" }
proc-macro-hack = "0.5.19"
